<resources>
    <string name="app_name">SeaWindow</string>
    <string name="app_video">视频</string>
    <string name="app_master">首页</string>
    <string name="app_me">我</string>
    <string name="app_find">发现</string>
    <string name="master_hotspot">海洋热点</string>
    <string name="master_knowledge">海洋知识</string>
    <string name="master_model">海模展览</string>
    <string name="master_question">有趣问答</string>
    <string name="master_activity">活动</string>
    <string name="username_hint">请输入手机号码</string>
    <string name="email_hint">请输入邮箱地址</string>
    <string name="password_hint">请输入密码</string>
    <string name="login">登录</string>
    <string name="register_login">注册</string>
    <string name="forget_password">忘记密码?</string>
    <string name="login_params_null">手机号码或者用户名为空</string>
    <string name="login_params_error">手机号码格式错误</string>
    <string name="login_email_error">邮箱格式错误</string>
    <string name="login_net_error">网络错误</string>
    <string name="service_error">服务器错误</string>
    <string name="register">注册</string>
    <string name="name_hint">请输入昵称</string>
    <string name="confirm_password_hint">请确认密码</string>
    <string name="register_params_error">请输入正确的信息</string>
    <string name="phone_is_registered">手机号码已注册！</string>
    <string name="take_photo">拍照</string>
    <string name="take_photo_from_phone">从相册选择</string>
    <string name="lable_cancel">取消</string>
    <string name="register_password_diff">两次输入的密码不一致</string>
    <string name="rule_password">密码至少6位，不超过20位</string>
    <string name="re_enter_username">用户名输入有误，请重新输入</string>
    <string name="null_comment">输入的评论为空！</string>
    <string name="comment_too_long">评论不能超过70个字.</string>
    <string name="comment_unIllagle">评论含有非法字符。</string>
    <string name="username_is_too_long">用户名太长！</string>
    <string name="jump_out">跳过</string>
    <string name="comment">评论</string>
    <string name="send">发送</string>
    <string name="nick">昵称：</string>
    <string name="email">邮箱：</string>
    <string name="permission_dined">请先获取权限</string>
    <string name="loading">加载中……</string>
    <string name="picture_handling">图片处理中……</string>
    <string name="editpicturefragment_chose_pic">请选择一张图片</string>
    <string name="no_mirror">无滤镜</string>
    <string name="mirror_1">毛玻璃</string>
    <string name="mirror_2">浮雕</string>
    <string name="mirror_3">霓虹</string>
    <string name="mirror_4">紫色</string>
    <string name="mirror_5">泛黄</string>
    <string name="mirror_6">宝石蓝</string>
    <string name="mirror_7">宝丽来</string>
    <string name="mirror_8">泛红</string>
    <string name="mirror_9">荧光绿</string>
    <string name="phone_store">电话号码：</string>
    <string name="video_info">视频详情</string>
    <string name="sea_secret">海洋奥秘</string>
    <string name="sea_zoology">海洋生态</string>
    <string name="sea_resource">海洋资源</string>
    <string name="sea_defence">海洋国防</string>
    <string name="ocean_sailing">远洋航海</string>
    <string name="coastal_tourism">滨海旅游</string>
    <string name="start_requestion">开始答题</string>
    <string name="research">重新搜索</string>
    <string name="searching_question">正在搜索题库...</string>
    <string name="pre_question">上一题</string>
    <string name="next_question">下一题</string>
    <string name="end_question">结束答题</string>
    <string name="hint">提示</string>
    <string name="close">关闭</string>
    <string name="question_check">查看错题</string>
    <string name="question_reanswer">重新答题</string>
    <string name="lable_ok">确定</string>
    <string name="item_1">道题，答错</string>
    <string name="item_2">道题。</string>
    <string name="question_message">您答对了</string>
    <string name="right_answer">正确答案为：</string>
    <string name="choose_user">， 您选择的是：</string>
    <string name="no_wrong">您没有答错任何一道题，将为您重新搜索题库。</string>
    <string name="no_question">没有搜索到题目，请重新搜索</string>
</resources>
