<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/pop_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">

    <Button
            android:id="@+id/btn_take_photo"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:text="@string/take_photo"
            android:textSize="18dp"
            android:background="@drawable/choose_head_bg"
            android:textStyle="bold"/>
    <View
            android:background="@color/dimgrey"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

    <Button
            android:id="@+id/btn_pick_photo"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@drawable/choose_head_bg"
            android:text="@string/take_photo_from_phone"
            android:textSize="18dp"
            android:textStyle="bold"/>
    <View
            android:background="@color/dimgrey"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

    <Button
            android:id="@+id/btn_cancel"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:text="@string/lable_cancel"
            android:textSize="18dp"
            android:background="@drawable/choose_head_bg"
            android:textStyle="bold"/>

</LinearLayout>
