<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/loading_alert"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_gravity="center"
        android:visibility="gone"
        android:minHeight="100dp"
        android:minWidth="190dp"
        android:orientation="vertical"
        android:padding="10dp">

        <ProgressBar
            android:id="@+id/loading_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateDrawable="@drawable/progress_drawable_white"/>

        <TextView
            android:id="@+id/id_tv_loadingmsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8.0dp"
            android:layout_gravity="center"
            android:textColor="#000000"
            android:text="@string/searching_question"
            android:textSize="16.0dip"/>

    </LinearLayout>

    <Button
        android:id="@+id/start_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginTop="80dp"
        android:text="@string/start_requestion"
        android:layout_gravity="center"/>

    <LinearLayout
        android:id="@+id/question_part"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"/>

        <RadioGroup
            android:id="@+id/answer_part"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/radio_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"/>
            <RadioButton
                android:id="@+id/radio_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp" />
            <RadioButton
                android:id="@+id/radio_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"/>
            <RadioButton
                android:id="@+id/radio_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp" />
            <RadioButton
                android:id="@+id/radio_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"/>
        </RadioGroup>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_part"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:orientation="horizontal">

        <Button
            android:id="@+id/pre_question"
            android:layout_width="80dp"
            android:layout_height="33dp"
            android:background="@drawable/button_noclickable_shape"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:text="@string/pre_question" />

        <Button
            android:id="@+id/next_question"
            android:layout_width="80dp"
            android:layout_height="33dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/button_noclickable_shape"
            android:gravity="center"
            android:text="@string/next_question" />

        <Button
            android:id="@+id/end_answer"
            android:layout_width="80dp"
            android:layout_height="33dp"
            android:layout_marginRight="10dp"
            android:visibility="gone"
            android:background="@drawable/button_noclickable_shape"
            android:gravity="center"
            android:text="@string/end_question" />

    </LinearLayout>

</LinearLayout>
