<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="44dp"
    android:paddingRight="44dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/username_part"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@drawable/login_input2"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_marginTop="100dp"
        android:paddingBottom="10dp"
        android:layout_height="60dp">
        <ImageView
            android:layout_width="wrap_content"
            android:src="@drawable/lcon2"
            android:layout_height="wrap_content"/>
        <com.administrator.seawindow.view.EditTextWithDel
            android:id="@+id/mobile_text"
            android:layout_marginLeft="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_hint"
            android:inputType="phone"
            android:background="@null"
            style="?android:attr/textViewStyle"
            android:maxLines="1"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/password_part"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:background="@drawable/login_input2"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:layout_below="@id/username_part"
        android:layout_marginTop="20dp"
        android:paddingBottom="10dp"
        android:gravity="center_vertical"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/lcon_1"
            />
        <com.administrator.seawindow.view.EditTextWithDel
            android:id="@+id/password_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:layout_marginLeft="15dp"
            android:background="@null"
            style="?android:attr/textViewStyle"
            android:maxLines="1"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="60dp"
        android:layout_below="@id/password_part"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
                android:text="@string/login"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:textColor="#ffffff"
                android:paddingBottom="10dp"
                android:textAllCaps="false"
                android:background="@drawable/loginselector"
                android:id="@+id/login_button"/>

        <Button
                android:id="@+id/bt_login_register"
                android:text="@string/register_login"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:textColor="#ffffff"
                android:paddingBottom="10dp"
                android:layout_marginTop="10dp"
                android:textAllCaps="false"
                android:background="@drawable/loginselector"/>

    </LinearLayout>

</RelativeLayout>
