<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rl_edit_picture"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/mainLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/bottom_edit_linear"
            android:visibility="visible"
            android:gravity="center">

            <ImageView
                android:id="@+id/pictureShow"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/bottom_edit_linear"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_alignParentBottom="true"
            android:background="#000"
            android:paddingTop="10dp"
            android:paddingBottom="15dp"
            android:visibility="visible"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/ib_cancel"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@null"
                android:src="@drawable/filter_no"
                android:textColor="#32cd99"/>

            <ImageButton
                android:id="@+id/ib_jianqie"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/crop"
                android:gravity="center"
                android:background="@null"
                android:textColor="#979797"/>

            <ImageButton
                android:id="@+id/bt_guolv"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/filter"
                android:gravity="center"
                android:background="@null"
                android:textColor="#979797"/>

            <ImageButton
                android:id="@+id/bt_edit_finish"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center"
                android:src="@drawable/filter_ok"
                android:textColor="#32cd99"/>
        </LinearLayout>
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rl_crop"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/rl_croprelativelayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/ll_cropedit"
            android:visibility="visible"
            android:background="@color/common_bg">

            <com.administrator.seawindow.view.CropImageView
                xmlns:custom="http://schemas.android.com/apk/res-auto"
                android:id="@+id/cropmageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                custom:imageResource="@null"/>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/ll_cropedit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:background="#000"
            android:visibility="visible"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/crop_cancel"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@null"
                android:src="@drawable/filter_no"
                android:layout_height="match_parent"/>
            <View
                android:layout_weight="6"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>
            <ImageButton
                android:id="@+id/crop_ok"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@null"
                android:src="@drawable/filter_ok"
                android:layout_height="match_parent"/>
        </LinearLayout>
    </RelativeLayout>


    <LinearLayout
        android:id="@+id/ll_filter"
        android:visibility="gone"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/iv_filter"
            android:visibility="visible"
            android:layout_weight="6"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>
        <HorizontalScrollView
            android:id="@+id/filtersSV"
            android:layout_below="@id/iv_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            android:background="#e2dfdf"
            android:visibility="visible"
            android:layout_marginTop="10dp"
            >

            <RadioGroup
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/nofilter"
                    android:text="@string/no_mirror"
                    android:button="@null"
                    android:gravity="center"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:drawablePadding="5dp"
                    android:drawableTop="@drawable/nofilter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:id="@+id/filtermaoboli"
                    android:text="@string/mirror_1"
                    android:button="@null"
                    android:gravity="center"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:drawablePadding="5dp"
                    android:drawableTop="@drawable/maoboli"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:id="@+id/filterfudiao"
                    android:text="@string/mirror_2"
                    android:button="@null"
                    android:gravity="center"
                    android:drawablePadding="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:drawableTop="@drawable/fudiao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:id="@+id/filternihong"
                    android:text="@string/mirror_3"
                    android:button="@null"
                    android:gravity="center"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:drawablePadding="5dp"
                    android:drawableTop="@drawable/nihong"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:id="@+id/filterLOMO"
                    android:text="LOMO"
                    android:button="@null"
                    android:gravity="center"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:drawablePadding="5dp"
                    android:drawableTop="@drawable/lomo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:id="@+id/filterzise"
                    android:text="@string/mirror_4"
                    android:button="@null"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:gravity="center"
                    android:drawablePadding="5dp"
                    android:drawableTop="@drawable/zise"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:id="@+id/filterfanhuang"
                    android:text="@string/mirror_5"
                    android:button="@null"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:drawablePadding="5dp"
                    android:gravity="center"
                    android:drawableTop="@drawable/fanhuang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:id="@+id/filterbaoshilan"
                    android:text="@string/mirror_6"
                    android:button="@null"
                    android:gravity="center"
                    android:drawablePadding="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:drawableTop="@drawable/baoshilan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:id="@+id/filterbaolilai"
                    android:text="@string/mirror_7"
                    android:button="@null"
                    android:gravity="center"
                    android:drawablePadding="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:drawableTop="@drawable/baolilai"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:id="@+id/filterfanhong"
                    android:text="@string/mirror_8"
                    android:button="@null"
                    android:gravity="center"
                    android:drawablePadding="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:drawableTop="@drawable/fanhong"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:id="@+id/filteryingguanglv"
                    android:text="@string/mirror_9"
                    android:button="@null"
                    android:gravity="center"
                    android:drawablePadding="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:drawableTop="@drawable/yingguanglv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </RadioGroup>
        </HorizontalScrollView>

        <RelativeLayout
            android:id="@+id/rl_filter_bottom"
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true"
            android:background="#000"
            android:gravity="center_vertical"
            android:layout_height="50dp">
            <ImageButton
                android:id="@+id/filter_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:background="@drawable/bg_touch_highlight_white"
                android:src="@drawable/filter_no" />

            <ImageButton
                android:id="@+id/filter_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:background="@drawable/bg_touch_highlight_white"
                android:src="@drawable/filter_ok" />
        </RelativeLayout>
    </LinearLayout>



</RelativeLayout>