<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">


            <com.administrator.seawindow.view.ImageCircleView
                android:id="@+id/civ_info"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="50dp"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/def_head"
                android:layout_centerInParent="true" />


            <LinearLayout
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:padding="10dp"
                    android:background="#ffffff"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/nick"
                        android:textSize="16sp"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:gravity="left|center"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/et_name_info"
                        android:layout_width="0dp"
                        android:layout_marginLeft="20dp"
                        android:gravity="center|left"
                        android:layout_weight="3"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <LinearLayout
                    android:padding="10dp"
                    android:background="#ffffff"
                    android:layout_marginTop="30dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/email"
                        android:textSize="16sp"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:gravity="left|center"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/et_email_info"
                        android:layout_width="0dp"
                        android:layout_marginLeft="20dp"
                        android:gravity="center|left"
                        android:layout_weight="3"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <LinearLayout
                    android:background="#ffffff"
                    android:padding="10dp"
                    android:layout_marginTop="30dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/phone_store"
                        android:textSize="16sp"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:gravity="center|left"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/et_phone_info"
                        android:layout_weight="3"
                        android:gravity="center|left"
                        android:layout_marginLeft="20dp"
                        android:maxLines="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <LinearLayout
                    android:padding="10dp"
                    android:layout_marginTop="50dp"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/loginout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="退出登录" />

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
